--- a/styles.css
+++ b/styles.css
@@ -488,6 +488,11 @@ body {
             background-color: #333;
             
         }
+        .navebar ul li:hover {
+            
+            background-color: #b30077;
+            
+        }
        
         .checkbtn{
     
