--- a/styles.css
+++ b/styles.css
@@ -488,7 +488,7 @@ body {
             background-color: #333;
             
         }
-        .navebar ul li:hover {
+        .navebar ul li a:hover {
             
             background-color: #b30077;
             
