--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body{
     list-style: none;
 }
 
-.header .navebar ul li a {
+.header .navebar ul a{
     text-decoration: none;
     color: #fff;
     transition: all ease .5s;
