--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ body{
 .header .navebar ul a{
     text-decoration: none;
     color: #fff;
+    width:100%;
     transition: all ease .5s;
 }
 
@@ -736,7 +737,7 @@ body{
 
     .project-card:hover.project-card {
 
-        height: 50vh;
+        height: 65vh;
         margin: 10px;
     }
 
