--- a/styles.css
+++ b/styles.css
@@ -569,6 +569,7 @@ body{
 
      .navebar ul a {
         width: 100%;
+        text-decoration: none;
      }
     .navebar ul a li {
         height: 2px;
