Updated portfolio and resolved conflicts

--- a/styles.css
+++ b/styles.css
@@ -567,11 +567,7 @@ body{
         transition: ease-in-out 0.5s;
     }
 
-     .navebar ul a {
-        width: 100%;
-        text-decoration: none;
-     }
-    .navebar ul a li {
+    .navebar ul li {
         height: 2px;
         background-color: #004faa;
 
@@ -741,7 +737,7 @@ body{
 
     .project-card:hover.project-card {
 
-        height: 65vh;
+        height: 70vh;
         margin: 10px;
     }
 
